--- a/src/components/Issue.module.scss
+++ b/src/components/Issue.module.scss
@@ -12,7 +12,6 @@
   animation: grow 0.5s ease-out;
   overflow: hidden;
 
-
   @keyframes grow {
     0% {
       height: 0;
@@ -22,20 +21,22 @@
     }
   }
 
-  .compressed {
+  &.compressed {
     height: 150px;
   }
 
-  .expanded {
-    padding:20px
+  &.expanded {
+    padding: 20px;
   }
 
   h3 {
     text-decoration: underline;
     text-align: center;
+    margin: 0;
+    margin-bottom: 24px;
   }
 
-  h3,p {
+  p {
     margin: 0;
     margin-bottom: 24px;
   }
@@ -45,7 +46,7 @@
     margin-bottom: 20px;
   }
 
-  .changeStatusBtn{
+  .changeStatusBtn {
     &:hover {
       background-color: rgb(232, 124, 8);
     }
@@ -55,18 +56,19 @@
     padding: 12px 20px;
     font-size: 11px;
     @include animated-button;
+
+    &.buttonSecondary {
+      font-size: 9px;
+      padding: 8px 16px;
+    }
   }
 
-  .buttonSecondary {
-    font-size: 9px;
-    padding: 8px 16px;
+  .input,
+  .textarea {
+    @include input-animated;
   }
 
-  input,textarea {
-    @include input-animated
-  }
-
-  input {
+  .input {
     font-weight: bold;
   }
 
