--- a/src/components/IssueList.module.scss
+++ b/src/components/IssueList.module.scss
@@ -6,6 +6,7 @@
   padding: 20px;
   text-align: center;
 
+
   @media (max-width: 767px) {
     flex-direction: column;
     align-items: center;
@@ -24,6 +25,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   width: 400px;
   margin: 10px;
+  transition: all 0.2s linear;
 
   @media only screen and (max-width: 469px) {
     width: 80%;
@@ -51,44 +53,6 @@
 .sortBy {
   display: flex;
   align-items: space-around;
-  margin-bottom: 20px;
-
-  p {
-    margin-right: 10px;
-    font-weight: bold;
-    font-size: 16px;
-  }
-
-  select {
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #eee;
-    border: none;
-    font-size: 14px;
-    outline: none;
-    transition: all 0.2s ease-in-out;
-    box-shadow: 0 0 5px #ddd;
-    appearance: none;
-
-    &:hover {
-      cursor: pointer;
-      background-color: #ddd;
-    }
-
-    &:focus {
-      background-color: #fff;
-      box-shadow: 0 0 5px #aaa;
-    }
-
-    &::-ms-expand {
-      display: none;
-    }
-  }
-}
-
-.sortBy {
-  display: flex;
-  align-items: center;
   margin-bottom: 20px;
 
   p {
